# apa4i-telegram-bot-2.0

./: .gitignore  README.md  alembic.ini  example.env  pyproject.toml
alembic/: env.py
alembic/versions/: 0b1481cacb55_added_users_table.py  4473b84cdf82_user_table.py  6cc25b7a1026_user_field.py
db/: example.users.json
src/: config.py  exceptions.py  main.py  schemas.py
src/admin/: buttons.py  callbacks.py  exceptions.py  handlers.py  router.py  utils.py
src/admin/paginator/: exceptions.py  paginator.py  schemas.py
src/application/common/: comitter.py  commiter.py  identity_provider.py  interactor.py  user_gateway.py
src/application/common/exceptions/: __init__.py
src/application/common/interfaces/: user_repository.py
src/application/user/interactors/: add_user.py  demote_user.py  is_admin.py  is_whitelisted.py  promote_user.py  (+1 more)
src/auth/: admin_auth_middleware.py  auth_middleware.py  router.py  schemas.py  service.py
src/auth/database/: dispatcher.py  exceptions.py  service.py
src/bot/: bot.py  config.py  fsm_states.py  router.py
src/config/: config.py  exceptions.py  schemas.py  service.py
src/domain/models/: user.py
src/domain/services/: user.py
src/fb_token_parser/: exceptions.py  schemas.py  service.py
src/infrastructure/: config.py  database.py  interactor_factory.py
src/infrastructure/persistence/: comitter.py  commiter.py
src/invisible_text/: buttons.py  callbacks.py  form.py  fsm_states.py  router.py  service.py
src/main/: config.py  exceptions.py  main.py  schemas.py
src/root/: bot.py  buttons.py  callbacks.py  router.py
(+9 files in other folders)
